--- a/index.html
+++ b/index.html
@@ -489,53 +489,55 @@ body, #sidebar, #basemap-switcher {
       }
     }
 
-if (warstwa && warstwa.toLowerCase() === 'zwiedzone i niedostępne') {
-  return L.divIcon({
-    className: 'emoji-marker',
-    html: `<img src="https://upload.wikimedia.org/wikipedia/commons/0/03/Green_check.svg" width="28" height="28" class="checkmark-obrys">`,
-    iconSize: [32, 32],
-    iconAnchor: [16, 32]
-  });
-}
+    function createEmojiIcon(emojiOrUrl, warstwa) {
+      if (warstwa && warstwa.toLowerCase() === 'zwiedzone i niedostępne') {
+        return L.divIcon({
+          className: 'emoji-marker',
+          html: `<img src="https://upload.wikimedia.org/wikipedia/commons/0/03/Green_check.svg" width="28" height="28" class="checkmark-obrys">`,
+          iconSize: [32, 32],
+          iconAnchor: [16, 32]
+        });
+      }
 
-  if (!emojiOrUrl || String(emojiOrUrl).trim() === "" || emojiOrUrl === "undefined") {
-    return L.icon({
-      iconUrl: 'https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2_hdpi.png',
-      iconSize: [18, 29],
-      iconAnchor: [9, 29]
-    });
-  }
+      if (!emojiOrUrl || String(emojiOrUrl).trim() === "" || emojiOrUrl === "undefined") {
+        return L.icon({
+          iconUrl: 'https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2_hdpi.png',
+          iconSize: [18, 29],
+          iconAnchor: [9, 29]
+        });
+      }
 
-  const isUrl = emojiOrUrl && emojiOrUrl.startsWith("http");
+      const isUrl = emojiOrUrl && emojiOrUrl.startsWith("http");
 
-  if (isUrl) {
-    const isSztosy = warstwa === "Sztosy";
-    const cls = isSztosy ? "emoji-obrys-sztosy" : "emoji-obrys";
-    const overlay = isSztosy
-      ? `<span class="sztosy-gwiazda">⭐</span>`
-      : '';
+      if (isUrl) {
+        const isSztosy = warstwa === "Sztosy";
+        const cls = isSztosy ? "emoji-obrys-sztosy" : "emoji-obrys";
+        const overlay = isSztosy
+          ? `<span class="sztosy-gwiazda">⭐</span>`
+          : '';
 
-    return L.divIcon({
-      className: 'emoji-marker',
-      html: `
-        <div style="position: relative; display: inline-block;">
-          <img src="${emojiOrUrl}" class="${cls}" width="28" height="28">
-          ${overlay}
-        </div>`,
-      iconSize: [32, 32],
-      iconAnchor: [16, 32]
-    });
-  }
+        return L.divIcon({
+          className: 'emoji-marker',
+          html: `
+            <div style="position: relative; display: inline-block;">
+              <img src="${emojiOrUrl}" class="${cls}" width="28" height="28">
+              ${overlay}
+            </div>`,
+          iconSize: [32, 32],
+          iconAnchor: [16, 32]
+        });
+      }
 
-  const cls = warstwa === "Sztosy" ? "emoji-sztosy" : "";
+      const cls = warstwa === "Sztosy" ? "emoji-sztosy" : "";
 
-  return L.divIcon({
-    className: 'emoji-marker',
-    html: `<span class="${cls}">${emojiOrUrl}</span>`,
-    iconSize: [32, 32],
-    iconAnchor: [16, 32]
-  });
-}
+      return L.divIcon({
+        className: 'emoji-marker',
+        html: `<span class="${cls}">${emojiOrUrl}</span>`,
+        iconSize: [32, 32],
+        iconAnchor: [16, 32]
+      });
+    }
+
 
 function emojiHtml(str) {
   if (!str) return '';
